docs: rest docs update
Signed-off-by: hgkim <hgkim@openrd.com>

--- a/profanity-api/src/docs/clients/api/register.adoc
+++ b/profanity-api/src/docs/clients/api/register.adoc
@@ -2,10 +2,12 @@
 
 [NOTE]
 ====
-사용자 정보를 등록 후 API Key를 발급 받을 수 있는 API입니다
-
-발급된 API는 반드시 안전하게 보관해주세요
+사용자 정보를 등록 후 API Key를 발급 받을 수 있는 API입니다 발급된 API는 반드시 안전하게 보관해주세요
 ====
+
+- 생성 시 입력하는 정보는 최대한 실제 정보를 입력해주세요 (테스트용 정보 사용을 권장하지 않습니다)
+- 비정상적인 발급 요청등은 무통보 제거 될 수 있습니다
+- 또한 요청 서버의 인코딩 설정을 확인해주세요
 
 include::{snippets}/api/clients/register/curl-request.adoc[]
 
