fix: add more phrase
Signed-off-by: hgkim <hgkim@openrd.com>

--- a/profanity-api/src/docs/clients/api/register.adoc
+++ b/profanity-api/src/docs/clients/api/register.adoc
@@ -7,7 +7,9 @@
 
 - 생성 시 입력하는 정보는 최대한 실제 정보를 입력해주세요 (테스트용 정보 사용을 권장하지 않습니다)
 - 비정상적인 발급 요청등은 무통보 제거 될 수 있습니다
+** name에 ???로만 등록되는 경우 확인 혹은 문의 바랍니다.
 - 또한 요청 서버의 인코딩 설정을 확인해주세요
+- 등록 후 정보확인 API 를 통해 등록된 정보를 확인할 수 있습니다
 
 include::{snippets}/api/clients/register/curl-request.adoc[]
 
