docs: content fix
Signed-off-by: hgkim <hgkim@openrd.com>

--- a/profanity-api/src/docs/clients/clients.adoc
+++ b/profanity-api/src/docs/clients/clients.adoc
@@ -6,7 +6,12 @@ include::api/register.adoc[]
 include::api/info.adoc[]
 '''
 
-=== 키 확인  ===
+include::api/send-email.adoc[]
+'''
+
+include::api/valid-email.adoc[]
+'''
+
 
 [NOTE]
 ====
