feat: add part to check if the client exists
Signed-off-by: hgkim <hgkim@openrd.com>

--- a/profanity-api/src/docs/clients/clients.adoc
+++ b/profanity-api/src/docs/clients/clients.adoc
@@ -9,7 +9,7 @@ include::api/info.adoc[]
 include::api/send-email.adoc[]
 '''
 
-include::api/valid-email.adoc[]
+include::api/verify-email.adoc[]
 '''
 
 
