feat: update roadmap with new features and include words documentation
Signed-off-by: hgkim <hgkim@openrd.com>

--- a/profanity-api/src/docs/index.adoc
+++ b/profanity-api/src/docs/index.adoc
@@ -38,8 +38,8 @@ endif::[]
 
 * `진행예정` 욕설 임베딩을 통한 유사도 비율 추산 기능 추가
 * `진행예정` open ai를 통한 요청한 신규 비속어 데이터 추가 자동화
-* `진행예정` 자동 데이터베이스 신규 동기화 기능 개발
-* `진행예정` 적절하기 않은 비속어 혹은 비속어 추가를 위한 API 개발
+* `2025-02-15` 자동 데이터베이스 신규 동기화 기능 개발
+* `2025-02-10` 적절하기 않은 비속어 혹은 비속어 추가를 위한 API 개발
 * `2025-01-31` 동일한 비속어 캐싱 처리 개선
 * `2025-01-25` API Key 기반의 인증 방식 적용
 * `2025-01-3` API Key 기반의 인증 방식 개발
@@ -64,5 +64,8 @@ include::clients/clients.adoc[]
 
 '''
 include::filter/filter.adoc[]
+
+'''
+include::word/words.adoc[]
 
 '''
