Pr/34 신규 비속어 등록을 위한 프로세스 구현 (#45)
Signed-off-by: hgkim <hgkim@openrd.com>
Co-authored-by: hgkim <hgkim@openrd.com>

--- a/profanity-api/src/docs/index.adoc
+++ b/profanity-api/src/docs/index.adoc
@@ -22,7 +22,7 @@ endif::[]
 
 == overview(개요)
 
-한국어와 영어 비속어를 모두 검증할 수 있는 서비스입니다.
+한국어 비속어를 모두 검증할 수 있는 서비스입니다.
 
 운영은 제 개인 서버의 전기가 끊이지 않는 한 계속될 예정입니다.
 
@@ -36,17 +36,18 @@ endif::[]
 
 === History(업데이트 내역)
 
-* `진행예정` 프롬포팅을 통한 요청한 신규 데이터 추가 자동화
-* `진행예정` 자동 데이터베이스 신규 동기화 기능 개발
-* `진행예정` 적절하기 않은 비속어 혹은 비속어 추가를 위한 API 개발
-* `진행예정` 동일한 비속어 캐싱 처리 개선
-* `2025-1-25` API Key 기반의 인증 방식 적용
-* `2025-1-3` API Key 기반의 인증 방식 개발
+* `진행예정` 욕설 임베딩을 통한 유사도 비율 추산 기능 추가
+* `진행예정` open ai를 통한 요청한 신규 비속어 데이터 추가 자동화
+* `2025-02-15` 자동 데이터베이스 신규 동기화 기능 개발
+* `2025-02-10` 적절하기 않은 비속어 혹은 비속어 추가를 위한 API 개발
+* `2025-01-31` 동일한 비속어 캐싱 처리 개선
+* `2025-01-25` API Key 기반의 인증 방식 적용
+* `2025-01-3` API Key 기반의 인증 방식 개발
 * `2024-12-30`  특수문자를 고려한 검증 로직 개발 적용
 * `2024-12-27` 순수한 아키텍처 개선을 목적으로 코드 리팩토링 진행
 * `2024-11-30` 서버 컴퓨터 물리적 이동으로 인한 서버 검증 및 재배포
-* `2024-7-6` 120+a 가량의 비속어 데이터베이스 추가
-* `2024-7-1` 500+a 가량의 비속어 데이터베이스 추가
+* `2024-07-06` 120+a 가량의 비속어 데이터베이스 추가
+* `2024-07-01` 500+a 가량의 비속어 데이터베이스 추가
 * `2024.06` ~ 현재 서비스 운영 시작
 
 === Note
@@ -55,13 +56,16 @@ endif::[]
 - 비속어 검사의 경우 `아호코라식 알고리즘`을 사용하여 빠르게 검사합니다.
 - 원색적인 욕설의 경우 대부분 필터링이 가능합니다.
 - [KISO 이용자 보호 시스템 API 서비스](https://www.safekiso.com/)의 스펙과 유사하게 구현되어 있습니다.
-- 영어 욕설의 경우 몇몇 단어들은 포함되어있지만 모든 단어가 포함되어있지는 않습니다.
-추가적인 단어를 추가하고 싶으시면 이슈를 등록해주세요.
+- [.line-through]#영어 욕설의 경우 몇몇 단어들은 포함되어있지만 모든 단어가 포함되어있지는 않습니다.
+추가적인 단어를 추가하고 싶으시면 이슈를 등록해주세요.#
 
 
 include::clients/clients.adoc[]
 
 '''
 include::filter/filter.adoc[]
+
+'''
+include::word/words.adoc[]
 
 '''
