feat: add health check and ping API documentation
Signed-off-by: hgkim <hgkim@openerd.com>

--- a/profanity-api/src/docs/index.adoc
+++ b/profanity-api/src/docs/index.adoc
@@ -20,35 +20,29 @@ endif::[]
 
 '''
 
-== overview(개요)
 
-한국어 비속어를 모두 검증할 수 있는 서비스입니다.
+== Overview
 
-운영은 제 개인 서버의 전기가 끊이지 않는 한 계속될 예정입니다.
+이 서비스는 한국어와 영어 비속어를 모두 검출하고 필터링할 수 있는 무료 API입니다.
 
-만약 실제 운영 서비스에 사용할 목적이면서 비용에 대한 부담이 가능한 경우
+=== 주요 특징
 
-[KISO 이용자 보호 시스템 API 서비스](https://www.safekiso.com/)를 사용해보세요.
+- **경량 필터링 엔진**: 정규식과 비속어 데이터베이스를 활용한 효율적인 필터링
+- **고성능 검사**: `아호코라식 알고리즘`을 사용하여 빠르고, 정확한 비속어 검출
+- **다양한 필터링 모드**: 빠른 검사(QUICK), 일반 검사(NORMAL), 대체 검사(FILTER) 지원
+- **KISO 호환성**: [KISO 이용자 보호 시스템 API](https://www.safekiso.com/)와 유사한 스펙으로 구현
 
-월 7만원 가량의 비용으로 매우 높은 신뢰성을 가진 검증이 가능합니다.
+=== 이용 대상
 
-다만 우리는 돈이 없지만 비속어는 막고 싶으니 제가 무료 서비스를 제공해보도록 하겠습니다.
+이 API는 주로 다음과 같은 사용자를 위해 설계되었습니다:
 
-=== History(업데이트 내역)
+- 포트폴리오나 취미 프로젝트를 개발하는 학생 및 개발자
+- 비영리 서비스를 운영하는 소규모 단체
+- 비용은 최소화하면서 기본적인 비속어 필터링이 필요한 웹사이트/앱
 
-* `진행예정` 욕설 임베딩을 통한 유사도 비율 추산 기능 추가
-* `진행예정` open ai를 통한 요청한 신규 비속어 데이터 추가 자동화
-* `2025-02-15` 자동 데이터베이스 신규 동기화 기능 개발
-* `2025-02-10` 적절하기 않은 비속어 혹은 비속어 추가를 위한 API 개발
-* `2025-01-31` 동일한 비속어 캐싱 처리 개선
-* `2025-01-25` API Key 기반의 인증 방식 적용
-* `2025-01-3` API Key 기반의 인증 방식 개발
-* `2024-12-30`  특수문자를 고려한 검증 로직 개발 적용
-* `2024-12-27` 순수한 아키텍처 개선을 목적으로 코드 리팩토링 진행
-* `2024-11-30` 서버 컴퓨터 물리적 이동으로 인한 서버 검증 및 재배포
-* `2024-07-06` 120+a 가량의 비속어 데이터베이스 추가
-* `2024-07-01` 500+a 가량의 비속어 데이터베이스 추가
-* `2024.06` ~ 현재 서비스 운영 시작
+예산 제약 없이 상업적 서비스에 활용하실 경우에는 [KISO 이용자 보호 시스템 API](https://www.safekiso.com/)를 권장합니다(월 약 7만원).
+
+이 서비스는 개인 서버로 운영되므로 가용성은 보장되지 않지만, 기본적인 비속어 필터링 기능을 무료로 제공하는 데 의의가 있습니다.
 
 === Note
 
@@ -60,6 +54,9 @@ endif::[]
 추가적인 단어를 추가하고 싶으시면 이슈를 등록해주세요.#
 
 
+include::global/global.adoc[]
+
+'''
 include::clients/clients.adoc[]
 
 '''
